# Plotly-Chart-Generator

./: .gitignore  README.rst  pyproject.toml  requirements.txt
documentation/: docs.rst
examples/: bar-charts.ipynb  box_plot.ipynb  color-palettes.ipynb  dot_chart.ipynb  histogram.ipynb  layout.ipynb  line-charts.ipynb  other-charts.ipynb  scatter-charts.ipynb  subplots.ipynb  sunburst.ipynb
examples/.ipynb_checkpoints/: bar charts-checkpoint.ipynb
plotly_chart_generator/: __init__.py  bar_chart.py  box_plot.py  display_chart.py  dot_chart.py  histogram.py  line_chart.py  original__init__.py  pie_chart.py  scatter_chart.py  sunburst_chart.py
plotly_chart_generator/chart_styles/: __init__.py  bar_headings.py  bar_values.py  chart_annotation.py  chart_colors.py  chart_styles.py  shape.py  theme.py
plotly_chart_generator/subplots/: __init__.py  pie_subplots.py  scatter_subplots.py
plotly_chart_generator/utils/: check_df.py
tests/: test_plotly_chart_builder.py
